@@ -113,6 +113,7 @@ static cfg_opt_t kbd_opts[] =
     CFG_INT("off_threshold", 40, CFGF_NONE),
     CFG_BOOL("auto", 1, CFGF_NONE),
     CFG_INT("idle_timer", 60, CFGF_NONE),
+    CFG_INT("idle_level", KBD_BACKLIGHT_OFF, CFGF_NONE),
     CFG_END()
   };
 
@@ -226,6 +227,7 @@ config_print(void)
   printf("    auto off threshold: %d\n", kbd_cfg.off_thresh);
   printf("    auto enable: %s\n", (kbd_cfg.auto_on) ? "yes" : "no");
   printf("    idle timer: %d%s\n", kbd_cfg.idle, (kbd_cfg.idle > 0) ? "s" : "");
+  printf("    idle level: %d\n", kbd_cfg.idle_lvl);
   printf(" + CD eject:\n");
   printf("    enabled: %s\n", (eject_cfg.enabled) ? "yes" : "no");
   printf("    device: %s\n", eject_cfg.device);
@@ -358,6 +360,7 @@ config_load(void)
   kbd_cfg.off_thresh = cfg_getint(sec, "off_threshold");
   kbd_cfg.auto_on = cfg_getbool(sec, "auto");
   kbd_cfg.idle = cfg_getint(sec, "idle_timer");
+  kbd_cfg.idle_lvl = cfg_getint(sec, "idle_level");
   kbd_backlight_fix_config();
 
   sec = cfg_getsec(cfg, "eject");
